--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,8 @@
 version: 0.0
 os: linux
 files:
-  - source: /index.html
-    destination: /var/html/www
+  - source: /
+    destination: /home/bitnami
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies
