--- a/appspec.yml
+++ b/appspec.yml
@@ -2,18 +2,17 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/bitnami/stack
+    destination: /home/ubuntu/myapp
 hooks:
   BeforeInstall:
-    - location: scripts/CopyResources.sh
-    - location: scripts/CopyData.sh
+    - location: scripts/before_install.sh
+      runas: root
   AfterInstall:
-    - location: scripts/RunResourceTests.sh
-      timeout: 180
+    - location: scripts/after_install.sh
+      runas: root
   ApplicationStart:
-    - location: scripts/RunFunctionalTests.sh
-      timeout: 3600
+    - location: scripts/start_server.sh
+      runas: ubuntu
   ValidateService:
-    - location: scripts/MonitorService.sh
-      timeout: 3600
-      runas: codedeployuser
+    - location: scripts/validate_service.sh
+      runas: ubuntu
